--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "node-schedule": "^2.1.1",
+    "nodemon": "^3.1.4",
+    "puppeteer": "^23.2.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.25.0"
   }
